# repos

./: .agents  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CREDENTIALS_SETUP.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PUBLISH_DEMO.md  README.md  TESTING.md  TEST_AUDIT_REPORT.md  check_versions.sh  install.sh  vm.yaml
.agents.local/: project.md
.github/workflows/: docs-link-check.yml  markdown-link-check-config.json
benches/: benchmark.rs  context_benchmark.rs  fixes_benchmark.rs  visibility_benchmark.rs
config/aw/: main.tabs  profile.conf
docs/: CREDENTIALS_SETUP.md  PUBLISH_FEATURES.md  README.md  architecture.md  contributing.md  getting_started.md  glossary.md  installation.md
docs/archived-proposals/: PROPOSAL_CLEAN.md  PROPOSAL_CONSISTENCY.md
docs/examples/: README.md  ci-cd-integration.md  custom-workflows.md  github-actions-publish.yml  github-actions-security-audit.yml  performance-tuning.md  pre-push-hook.sh  troubleshooting.md
docs/guides/: commands.md  credentials_setup.md  publishing.md  security_auditing.md  subrepo_management.md  troubleshooting.md
src/: audit_command.rs  core.rs  fix.rs  git.rs  hygiene.rs  lib.rs  main.rs  sync_command.rs  truffle_command.rs  user_command.rs
src/audit/: fixes.rs  hygiene.rs  mod.rs  scanner.rs
src/audit/hygiene/: mod.rs  report.rs  rules.rs  scanner.rs
src/commands/: audit.rs  config.rs  doctor.rs  mod.rs  publish.rs  save.rs  staging.rs  sync.rs  user.rs
src/commands/publish/: executor.rs  mod.rs  planner.rs
src/core/: api.rs  config.rs  discovery.rs  mod.rs  progress.rs  settings.rs  stats.rs  stats_tests.rs
src/core/sync/: coordinator.rs  mod.rs  renderer.rs  state.rs
src/git/: api.rs  config.rs  failure.rs  mod.rs  operations.rs  remote.rs  status.rs
src/package/: cargo.rs  mod.rs  npm.rs  pypi.rs  traits.rs
src/subrepo/: mod.rs  status.rs  sync.rs  validation.rs
src/utils/: fs.rs  mod.rs  terminal.rs
tests/: blocking_check.rs  integration_tests.rs  subrepo_blocking_check.rs  test_audit.rs  test_audit_fixes.rs  test_audit_fixes_advanced.rs  test_commands.rs  test_discovery.rs  test_error_scenarios.rs  test_publish.rs  test_stress.rs  test_subrepo_advanced.rs  test_subrepo_sync.rs
tests/common/: fixtures.rs  git.rs  mod.rs
