[package]
name = "repos"
version = "1.0.0"
edition = "2021"
authors = ["goobits contributors"]
description = "Fast Git repository management and synchronization tool"
readme = "README.md"
license = "MIT"
keywords = ["git", "sync", "repositories", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/goobits/repos"
homepage = "https://github.com/goobits/repos"

[dependencies]
# Error handling
anyhow = "1.0"

# Terminal output and formatting
indicatif = "0.18"

# File system traversal
walkdir = "2.4"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# TruffleHog integration dependencies
reqwest = { version = "0.12", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
zip = { version = "1.0", default-features = false, features = ["deflate"] }
chrono = "0.4"

[[bin]]
name = "repos"
path = "src/main.rs"
doc = false  # Don't include binary in documentation