[package]
name = "goobits-repos"
version = "3.1.0"
edition = "2021"
authors = ["goobits contributors"]
description = "Fast Git repository management and synchronization tool"
readme = "README.md"
license = "MIT"
keywords = ["git", "sync", "repositories", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/goobits/repos"
homepage = "https://github.com/goobits/repos"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_tokio"] }
tempfile = "3.23"

[dependencies]
# Error handling
anyhow = "1.0"

# Terminal output and formatting
indicatif = "0.18"

# File system traversal
ignore = "0.4"

# Async runtime and utilities
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# Parallel processing
rayon = "1.10"
dashmap = "6.0"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# System information
num_cpus = "1.16"

# TruffleHog integration dependencies
reqwest = { version = "0.12.24", features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tar = "0.4"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
zip = { version = "1.0", default-features = false, features = ["deflate"] }
chrono = "0.4"
sha2 = "0.10"
async-trait = "0.1.89"

[[bin]]
name = "repos"
path = "src/main.rs"
doc = false  # Don't include binary in documentation

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "visibility_benchmark"
harness = false

[lib]
name = "goobits_repos"
path = "src/lib.rs"
